[metadata]
name = fusion_data_backend
author = Chris (Qing) Yuan
author_email = chris.y@fusionanalytics.com
python_requires = >=3.5
version = attr: fusion_data_backend.__version__
description = Handles backend data processing from models to YF inputs.
long_description = file: README.rst, HISTORY.rst, LICENSE.rst
url = https://github.com/fuser-chrisyuan/fusion_data_backend
keywords = fusion_data_backend
classifiers =
    Framework :: N/A
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
# scripts =
#     bin/first.py
#     bin/second.py
setup_requires =
    pytest-runner
install_requires =
    Click>=7.0
    # importlib; python_version == "2.6"
test_suite = tests
tests_require = pytest>=3

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
include =
    fusion_data_backend
    fusion_data_backend.*
[options.entry_points]
console_scripts =
    fusion_data_backend = fusion_data_backend.cli:main

# [options.data_files] # deprecated in setuptools. https://setuptools.readthedocs.io/en/latest/references/keywords.html
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[bumpversion]
current_version = attr: fusion_data_backend.__version__
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:fusion_data_backend/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
# collect_ignore = ['setup.py']

